--- a/styles/globals.css
+++ b/styles/globals.css
@@ -37,7 +37,8 @@
     @apply bg-balticSea dark:bg-chalk/80 text-white dark:text-balticSea px-4 lg:px-8 py-2 rounded-full cursor-pointer disabled:bg-balticSea/20 disabled:dark:bg-chalk/10;
   }
   .navLink {
-    @apply text-center border-[1px] border-balticSea dark:border-ivory rounded-full px-4 py-2 mb-4 cursor-pointer hover:font-bold hover:border-clay dark:hover:border-clay  active:border-clay active:text-clay transition-transform duration-200 ease-out;
+    @apply text-center border-[1px] border-balticSea dark:border-ivory rounded-full px-4 py-2 mb-4 cursor-pointer hover:font-bold hover:border-clay dark:hover:border-clay  active:border-clay  
+    active:text-clay transition-transform duration-200 ease-out;
   }
   .headerTitle {
     @apply text-4xl capitalize px-10 pt-5 underline decoration-clay decoration-2 underline-offset-4 decoration-double;
